examples/test/testpolicy16116.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16116
  namespace: namespace444
spec:
  podSelector:
    matchLabels:
      key26: value43
      key10: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value41
          key18: value22
      podSelector:
        matchLabels:
          key0: value12
